# Log-Anomaly-Detection-System-1.0

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  Makefile  README.md  docker-compose.yml  main.py  mlflow.db  pyproject.toml  render.yaml  requirements.txt
.github/workflows/: ci.yml
api/: __init__.py  main.py  schemas.py
configs/: api_config.yaml  model_config.yaml  pipeline_config.yaml
dashboard/: __init__.py  app.py
data/: __init__.py  generate_logs.py
deploy/: DEPLOYMENT_GUIDE.md  cloud_setup.sh  deploy.sh
experiments/: __init__.py  tracker.py
features/: __init__.py  engineering.py  store.py
mlruns/1/models/m-e5e0029b72064a33990b522379c98edf/artifacts/: MLmodel  conda.yaml  requirements.txt
models/: __init__.py  autoencoder.py  evaluator.py  isolation_forest.py  one_class_svm.py  trainer.py
monitoring/: __init__.py  metrics.py  prometheus.yml
pipelines/: __init__.py  ingestion.py  orchestrator.py  preprocessing.py  validation.py
streaming/: __init__.py  processor.py
tests/: conftest.py
tests/integration/: test_api.py
tests/unit/: test_helpers.py  test_ingestion.py  test_models.py  test_monitoring.py  test_preprocessing.py  test_validation.py
utils/: __init__.py  config_loader.py  helpers.py  logger.py  settings.py
